# helloworld2

./: 2  BaseDeck.cpp  BaseDeck.h  Button.cpp  Button.cpq  Button.h  CMakeLists.txt  Card.cpp  Card.h  CompDeck.cpp  CompDeck.h  Deck.cpp  Deck.h  EndGame.cpp  EndGame.h  Game.cpp  Game.h  GameState.cpp  GameState.h  HelloWorld2  MainMenuState.cpp  MainMenuState.h  PauseMenu.cpp  PauseMenu.h  PlayerDeck.cpp  PlayerDeck.h  README.md  State.cpp  State.h  StatePlaying.cpp  StatePlaying.h  TrashDeck.cpp  TrashDeck.h  VectorMath.cpp  VectorMath.h  build  cmake_release.sh  debugbuild  debugoutput.txt  hello  (+4 more)
cmakebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
